[package]
name = "core_nft_robber"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
borsh = "^0.10" # same as mpl_core, what a mess
clap = { version = "4.5.50", features = ["derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
hex = "0.4.3"
log = "0.4.28"
mpl-core = "0.11.1"
reqwest = "0.12.24"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
solana-pubkey = "2.4.0" # same as mpl_core
tokio = { version = "1.48.0", features = ["full"] }
